# Afterlife_game

./: Backlog (plan)  CMakeLists.txt  README.md  main.cpp  test.cpp  wiki.md
include/: character.h  enemy.h  enfactory.h  factory.h  game.h  movable.h  object.h  objfactory.h  preload.h  projectiles.h  raylib.h
src/: Character.h  character.cpp  enemy.cpp  game.cpp  main.cpp  movable.cpp  object.cpp  object.h  preload.cpp  projectiles.cpp  projectiles.h
